2022-08-31 Felix Salfelder <felix AT salfelder.org>

	* sdcc/support/cpp/gcc/opts.cc,
	  sdcc/support/cpp/libcpp/mkdeps.cc:
	  Test x2.

2022-08-30 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/configure, support/cpp/configure.ac:
	  Omit gmp/mpfr checks and GCC_TOPLEV_SUBDIRS.

2022-08-23 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/configure, support/cpp/configure.ac,
	  support/cpp/gcc/configure, support/cpp/gcc/configure.ac:
	  Reduce diff against upstream gcc.

2022-08-21 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in,
	  support/regression/cases/Makefile.in:
	  Test summary depends on test set.

2022-08-20 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in:
	  Do not clean no-longer autogenerated files.

2022-08-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/hc08/spec.mk,
	  support/regression/ports/s08/spec.mk:
	  Increase regression test timeout slightly, so a passive-cooled Raspi 4B can run the qct_0042-prime regression test in Summer.

2022-08-16 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  .version,
	  support/regression/tests/pragma_pedantic_parse_number.c:
	  Document dropped support for --pedantic-parse-number and #pragma pedantic_parse_number.

2022-08-16 Felix Salfelder <felix AT salfelder.org>

	* support/cpp:
	  Partially import gcc (12.1.0, 1ea978e3066a),
	  Isolate, dissect, gcc/cpp,
	  Create dummy target files,
	  (Re)add -obj-ext option,
	  Change # to #line in cpp output,
	* Makefile.common.in:
	  Set .DELETE_ON_ERROR
	* configure.ac, src/Makefile.in:
	  Obtain svn revision and paste into version.h
	* configure.ac, Makefile.in, bin/*:
	  Add Makefile, wrap executables, adjust rules.

2022-08-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/pic16/startup/crt0.c,
	  device/lib/pic16/startup/crt0i.c,
	  device/lib/pic16/startup/crt0iz.c: